# fmri_decoding

./: .amltconfig  .amltignore  .gitignore  pyproject.toml  readme.md
decoding/: StimulusModel.py  config.py  lm_sampler.py  lm_wrapper.py  stimulus_model.py  utils_eval.py  utils_resp.py  utils_stim.py
decoding/e2e/: end2end_model.py  evaluate_huth.py  evaluate_test.py  utils_eval.py
decoding/e2e/language_generation/: data.py  main.py  model.py
decoding/language_generation/: config.py  data.py  main.py  model.py  model_utils.py  top_model_utils.py
decoding/tang/: StimulusModel.py  config.py  evaluate_predictions.py  utils_eval.py  utils_resp.py  utils_stim.py
decoding/tang/utils_ridge/: DataSequence.py  dsutils.py  ridge.py  stimulus_utils.py
decoding/utils_ridge/: DataSequence.py  dsutils.py  ridge.py  stimulus_utils.py  util.py
experiments/: 00_language_generation.py  00_train_EM.py  00_train_WR.py  01_e2e.py  01_fit_encoding.py  01_train_EM.py  01_train_WR.py  02_decode_and_eval.py  02_e2e.py  02_run_decoder.py  03_e2e_evaluate.py  03_evaluate_predictions.py  _download_data.py
experiments/e2e/: 00_language_generation.py  01_predict_word_timings.py  02_e2e.py  03_e2e_evaluate.py
experiments/tang/: 00_train_EM.py  01_train_WR.py  02_run_decoder.py  03_evaluate_predictions.py  _download_data.py
language_generation/: main.py
notebooks/: 01_read_results.ipynb
scripts/: 01_sweep_EM.py  01_sweep_beam.py  02_sweep_decode.py  launch.yaml
scripts/e2e/language_generation/: example.sh  pereira.sh
scripts/e2e_baseline/e2e/: 01_run_e2e.sh
(+5 files in other folders)
