[project]
name = "fmri-decoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "jiwer",
    "bert-score",
    "h5py>=3.14.0",
    "datasets>=2.14.7",
    "git-annex>=10.20250828",
    "datalad>=1.2.1",
    "imodelsx>=1.0.11",
    "transformers>=4.56.2",
    "huggingface-hub>=0.17.1",
    "nltk>=3.9.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["decoding*"]
