[project]
name = "fmri-decoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "jiwer",
    "bert-score",
    "h5py>=3.14.0",
    "datasets>=2.14.7",
    "git-annex>=10.20250828",
    "datalad>=1.2.1",
    "transformers>=4.56.2",
    "huggingface-hub>=0.17.1",
    "nltk>=3.9.1",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "imodelsx",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["decoding*"]

[tool.uv.sources]
imodelsx = { path = "../imodelsX", editable = true }
amlt = { index = "msr" }

[[tool.uv.index]]
name = "msr"
url = "https://msrpypi.azurewebsites.net/stable/leloojoo"
